--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 asgiref==3.4.1
 async-generator==1.10
+atomicwrites==1.4.1
 attrs==21.2.0
 autopep8==1.6.0
 certifi==2021.10.8
@@ -9,6 +10,7 @@ coverage==6.2
 cryptography==36.0.0
 Django==4.0
 django-debug-toolbar==3.2.4
+djangorestframework==3.14.0
 docopt==0.6.2
 Faker==10.0.0
 flake8==4.0.1
@@ -22,7 +24,7 @@ mypy-extensions==0.4.3
 outcome==1.1.0
 packaging==21.3
 parameterized==0.8.1
-# Pillow==8.4.0
+Pillow==9.5.0
 pluggy==1.0.0
 py==1.11.0
 pycodestyle==2.8.0
@@ -47,6 +49,7 @@ toml==0.10.2
 trio==0.19.0
 trio-websocket==0.9.2
 typing_extensions==4.0.1
+tzdata==2023.3
 urllib3==1.26.7
 watchdog==2.1.6
 whitenoise==5.3.0
