--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,15 @@
-asgiref==3.4.1
+asgiref==3.7.2
 async-generator==1.10
 atomicwrites==1.4.1
 attrs==21.2.0
 autopep8==1.6.0
-certifi==2021.10.8
+certifi==2023.5.7
 cffi==1.15.0
 colorama==0.4.4
-coverage==6.2
+coverage==7.2.7
 cryptography==36.0.0
-Django==4.0
+Django==4.2.2
+django-cors-headers==4.1.0
 django-debug-toolbar==3.2.4
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
