--- a/.env-example
+++ b/.env-example
@@ -30,3 +30,4 @@ DATABASE_PORT = "5432"
 # Comma separated values
 ALLOWED_HOSTS = '127.0.0.1, localhost'
 CSRF_TRUSTED_ORIGINS = 'https://localhost'
+CORS_TRUSTED_ORIGINS = 'http://127.0.0.1:5500'
